--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="user_name">用户名</string>
     <string name="password">密码</string>
+    <string name="status">状态</string>
     <string name="register">注册</string>
     <string name="login">登录</string>
 
