--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
 
     <string name="app_name">seed</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">设置</string>
+    <string name="action_quit">退出</string>
     <string name="ok">确定</string>
     <string name="cancel">取消</string>
     <string name="waiting">请稍候&#8230;</string>
