--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="ok">确定</string>
     <string name="cancel">取消</string>
     <string name="waiting">请稍候&#8230;</string>
+    <string name="colon">:</string>
 
     <string name="user_name">用户名</string>
     <string name="password">密码</string>
